--- a/movie-page/cinema-sensations-server/package.json
+++ b/movie-page/cinema-sensations-server/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "formidable": "^1.2.2",
+    "pg": "^8.7.1",
+    "sequelize": "^6.6.5"
   }
 }
